--- a/KrysiaBartek2024/SYSTEM/strefujot.tex
+++ b/KrysiaBartek2024/SYSTEM/strefujot.tex
@@ -239,4 +239,150 @@ lo / me / hi / no
 \end{itemize}
 \end{bidpage}
 
+\section{1\clubs -- 2\clubs sequence}
+
+1\clubs -- 2\clubs = \nat\ \gf
+
+1\clubs -- 2\nt = 12-14/18+ \bal
+
+1\clubs -- 3\nt = 15-17
+
+\vspace{1cm}
+
+\begin{bidpage}
+\subsubsection*{1\clubs\ -- 2\clubs\\
+                ?}
+\begin{itemize}
+    \item 2\diams = \bal 12-14/any acol
+    \item 2\hearts = stopper
+    \item 2\spades = stopper
+    \item 2\nt = \bal 18-19/22+
+    \item 3\clubs = \nat (5+)
+    \item 3\diams/3\major = spl
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+    \subsubsection*{1\clubs\ -- 1\clubs\\
+                2\diams -- ?}
+\begin{itemize}
+    \item 2\major = nat 4\major
+    \item 2\nt = bal nat \clubs
+    \item 3\clubs = long \clubs
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+\subsubsection*{1\clubs\ -- 1\clubs\\
+                2\diams -- 2\hearts\\
+                ?}
+\begin{itemize}
+    \item 2\spades = 4\spades/acol \spades
+    \item 2\nt = no 4\major
+    \item 3\clubs = nat \clubs
+    \item 3\diams = acol
+    \item 3\hearts = fit
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+\subsubsection*{1\clubs\ -- 1\clubs\\
+                2\diams -- 2\spades\\
+                ?}
+\begin{itemize}
+    \item 2\nt = no 4\spades
+    \item 3\clubs = nat \clubs
+    \item 3\diams = acol
+    \item 3\hearts = acol
+    \item 3\spades = 4\spades
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+\subsubsection*{1\clubs\ -- 1\clubs\\
+                2\diams -- 2\nt\\
+                ?}
+\begin{itemize}
+    \item 3\clubs = nat \clubs
+    \item 3\diams = acol
+    \item 3\hearts = acol
+    \item 3\spades = acol
+    \item 3\nt = 12-14 bal no \clubs support
+\end{itemize}
+\end{bidpage}
+
+
+\begin{bidpage}
+\subsubsection*{1\clubs\ -- 1\clubs\\
+                2\diams -- 3\clubs\\
+                ?}
+\begin{itemize}
+    \item 3\diams = val
+    \item 3\hearts = val
+    \item 3\spades = val
+    \item 3\nt = to play
+    \item 4\clubs = acol \diams
+    \item 4\diams = acol \hearts
+    \item 4\hearts = acol \spades
+\end{itemize}
+\end{bidpage}
+
+
 \end{document}
+
+% 1\clubs - 2\clubs
+% ?
+% 2\diams = \bal 12-14/any acol
+% 2\hearts = stopper
+% 2\spades = stopper
+% 2\nt = \bal 18-19/22+
+% 3\clubs = \nat (5+) 
+% 3\diams/3\major = spl
+
+% 1\clubs - 2\clubs
+% 2\diams - ?
+% 2\major = nat 4\major
+% 2\nt = bal nat \clubs
+% 3\clubs = long \clubs
+
+% 1\clubs - 2\clubs
+% 2\diams - 2\hearts
+% ?
+% 2\spades = 4\spades/acol \spades
+% 2\nt = no 4\major
+% 3\clubs = nat \clubs
+% 3\diams = acol
+% 3\hearts = fit
+
+% 1\clubs - 2\clubs
+% 2\diams - 2\spades
+% ?
+% 2\nt = no 4\spades
+% 3\clubs = nat \clubs
+% 3\diams = acol
+% 3\hearts = acol
+% 3\spades = 4\spades
+
+% 1\clubs - 2\clubs
+% 2\diams - 2\nt
+% ?
+% 3\clubs = nat \clubs
+% 3\diams = acol
+% 3\hearts = acol
+% 3\spades = acol
+% 3\nt = 12-14 bal no \clubs support
+
+% 1\clubs - 2\clubs
+% 2\diams - 3\clubs
+% ?
+% 3\diams = val
+% 3\hearts = val
+% 3\spades = val
+% 3\nt = to play
+% 4\clubs = acol \diams
+% 4\diams = acol \hearts
+% 4\hearts = acol \spades
+
+
+
+
