--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -29,6 +29,7 @@
 \newcommand{\stopp}{{\color{Maroon}\textsc{stop}}\hspace{4pt}}
 \newcommand{\enemy}[1]{(#1)}
 \newcommand{\dbl}{{\color{Red}$\bm{\times}$}\xspace}
+\newcommand{\xdbl}{{\color{Red}$\bm{\times}$}}
 \newcommand{\rdbl}{{\color{Blue}$\bm{\times\!\times}$}\xspace}
 \newcommand{\alert}{{\color{Cyan}\textsc{alert}}\hspace{4pt}\xspace}
 \newcommand{\conventional}[1]{\textbf{#1*}}
