new Kacper system

--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -10,6 +10,7 @@
 \subimport{}{sequence.sty}
 
 \newcommand{\ntx}{{\small{NT}}}
+\newcommand{\ntch}{{\Large{NT}}}
 \newcommand{\hcp}{\textsc{hcp}\xspace}
 \newcommand{\bal}{\textsc{bal}\xspace}
 \newcommand{\nat}{\textsc{nat}\xspace}
@@ -40,6 +41,8 @@
 \newcommand{\mixed}{{\color{Fuchsia}\textbf{Mixed raise}}}
 \newcommand{\ns}{{\color{BurntOrange}\textbf{Non-Serious}}}
 \newcommand{\lsf}{{\color{WildStrawberry}\textbf{ASK LSF}}}
+\newcommand{\ahsf}{{\color{WildStrawberry}\textbf{ASK HSF}}}
+\newcommand{\hsf}{{\color{WildStrawberry}\textbf{HSF}}}
 \newcommand{\leb}{{\color{CadetBlue}\textbf{LEB}}}
 \newcommand*\link[1]{\hspace*{0em plus 1fill}\makebox{#1}}
 \newcommand{\imp}{{\color{BurntOrange}\link{\textbf{\large!}}}}
