2-s overcalls old version

--- a/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
+++ b/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
@@ -949,16 +949,16 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \part*{\colorbox{RoyalPurple!30}{Competitive bidding}}
 \addcontentsline{toc}{part}{Competitive bidding}
 
-\chapter*{\colorbox{Plum!30}{1-level opening overcall}}
-\addcontentsline{toc}{chapter}{1-level opening overcall}
+\chapter*{\colorbox{Plum!30}{1-level opening -- opponents' overcalls}}
+\addcontentsline{toc}{chapter}{1-level opening -- opponents' overcalls}
 
-\section*{\colorbox{blue!30}{1\clubs\ opening overcall}}
-\addcontentsline{toc}{section}{1\clubs\ opening overcall}
+\section*{\colorbox{blue!30}{Opponents' overcalls over 1\clubs\ opening}}
+\addcontentsline{toc}{section}{Opponents' overcalls over 1\clubs\ opening}
 
 \subsubsection*{1\clubs -- (\dbl) -- ?}
 \begin{itemize}
     \item \rdbl = 10+
-    \item 1\diams/1\hearts/1\spades = 7+\hcp, 4+
+    \item 1\diams/1\hearts/1\spades = \trsf{\hearts/\spades/\nt} 4+
     \item 1\nt = 7-11
     \item 2\clubs/2\diams/2\hearts/2\spades = \trsf{\diams/\hearts/\spades/\clubs} 6+, weak/\gf
     \item 2\nt = \minor weak/\gf
@@ -1060,8 +1060,8 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item \dbl = 4\hearts, \gf, no \spades stopper
 \end{itemize}
 
-\section*{\colorbox{blue!30}{1\diams\ opening overcall}}
-\addcontentsline{toc}{section}{1\diams\ opening overcall}
+\section*{\colorbox{blue!30}{Opponents' overcalls over 1\diams\ opening}}
+\addcontentsline{toc}{section}{Opponents' overcalls over 1\diams\ opening}
 
 \subsubsection*{1\diams -- (\dbl) -- ?}
 \begin{itemize}
@@ -1154,8 +1154,8 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item \dbl = \hearts, \gf
 \end{itemize}
 
-\section*{\colorbox{blue!30}{1\hearts\ opening overcall}}
-\addcontentsline{toc}{section}{1\hearts\ opening overcall}
+\section*{\colorbox{blue!30}{Opponents' overcalls over 1\hearts\ opening}}
+\addcontentsline{toc}{section}{Opponents' overcalls over 1\hearts\ opening}
 
 \subsubsection*{1\hearts -- (\dbl) -- ?}
 \begin{itemize}
@@ -1253,8 +1253,8 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 4\spades = slam try, \spades void
 \end{itemize}
 
-\section*{\colorbox{blue!30}{1\spades\ opening overcall}}
-\addcontentsline{toc}{section}{1\spades\ opening overcall}
+\section*{\colorbox{blue!30}{Opponents' overcalls over 1\spades\ opening}}
+\addcontentsline{toc}{section}{Opponents' overcalls over 1\spades\ opening}
 
 \subsubsection*{1\spades -- (\dbl) -- ?}
 \begin{itemize}
@@ -1349,6 +1349,233 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 4\spades = to play
     \item 4\nt = minors
 \end{itemize}
+
+\section*{\colorbox{blue!30}{Opponents' overcalls over 1\ntx\ opening}}
+\addcontentsline{toc}{section}{Opponents' overcalls over 1\ntx\ opening}
+
+\subsubsection*{1\ntx\ -- (2\clubs) -- ?}
+2\clubs\ = \clubs
+\begin{itemize}
+    \item \dbl\ = Stayman
+\end{itemize}
+
+\textsc{system on}
+
+\subsubsection*{1\ntx\ -- (\alrts{2\clubs}) -- ?}
+2\clubs\ = \major
+\begin{itemize}
+    \item \dbl\ = 8+
+    \item 2\diams, 2\hearts = to play
+    \item 2\spades = \minor, \invp
+    \item 2\nt/3\clubs/3\diams/\3\hearts = \trsf{\clubs/\diams/\hearts/\spades}, 5+, \invp
+    \item 3\spades = \gf
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (2\diams) -- ?}
+2\diams\ = \diams
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 2\hearts, 2\spades\ = to play
+    \item 2\nt\ = Lebensohl
+    \item 3\clubs\ = 5+\hearts, \invp
+    \item 3\diams\ = 1-\diams, \invp
+    \item 3\hearts\ = 5+\spades, \invp
+    \item 3\spades\ = 5+\clubs, \invp
+    \item 3\nt\ = no \diams\ stopper
+    \item 4\diams, 4\hearts\ = Texas
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (\alrts{2\diams}) -- ?}
+2\diams\ = 6+ \major
+\begin{itemize}
+    \item \dbl\ = 8+
+    \item 2\hearts, 2\spades\ = to play
+    \item 2\nt\ = Lebensohl
+    \item 3\clubs\ = 5+\diams, \invp
+    \item 3\diams\ = 5+\hearts, \invp
+    \item 3\hearts\ = 5+\spades, \invp
+    \item 3\spades\ = 5/5 \minor
+    \item 3\nt\ = to play
+    \item 4\diams, 4\hearts\ = Texas
+\end{itemize}
+
+
+\subsubsection*{1\ntx\ -- (2\hearts) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 2\spades\ = to play
+    \item 2\nt\ = Lebensohl
+    \item 3\clubs\ = 5+\diams, \invp
+    \item 3\diams\ = 5+\spades, \invp
+    \item 3\hearts\ = 1-\hearts, \invp
+    \item 3\spades\ = 55 \minor, \gf
+    \item 3\nt\ = no \hearts\ stopper
+    \item 4\hearts\ = Texas
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (2\spades) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 2\nt\ = Lebensohl
+    \item 3\clubs\ = 5+\diams, \invp
+    \item 3\diams\ = 5+\hearts, \invp
+    \item 3\hearts\ = 55\minor, \gf
+    \item 3\spades\ = 1-\spades, \invp
+    \item 3\nt\ = no \spades\ stopper
+    \item 4\diams\ = Texas
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (\alrts{2\nt}) -- ?}
+2\nt\ = \minor
+\begin{itemize}
+    \item \dbl\ = 10+
+    \item 3\clubs\ = Stayman
+    \item 3\diams\ = 5+\hearts, \invp
+    \item 3\hearts\ = 5+\spades, \invp
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (3\clubs) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 3\diams\ = 5+\hearts, \invp
+    \item 3\hearts\ = 5+\spades, \invp
+    \item 3\spades\ = 5+\diams, \invp
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (3\diams) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item 3\hearts\ = 5+\spades, \invp
+    \item 3\spades\ = 5+\hearts, \gf
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (\alrts{\dbl}) -- ?}
+\dbl\ artificial
+
+\textsc{system on}
+
+\subsubsection*{1\ntx\ -- (\dbl) -- ?}
+\dbl\ = penalty
+\begin{itemize}
+    \item \pass\ = forces \rdbl
+    \item \rdbl\ = forces 2\clubs
+    \item 2\anysuit{x}\ = forces \anysuit{x+1}
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- (\dbl) -- \alrts{P} -- (P)\\
+                \rdbl\ -- (P) -- ?}
+\begin{itemize}
+    \item \pass\ = penalty
+    \item 2\clubs\ = 4\clubs\ + 4\anysuit{x}\ or 4333 or any other edge case
+    \item 2\diams\ = 4\diams\ + 4\major
+    \item 2\hearts\ = 4\hearts\ + 4\spades
+\end{itemize}
+
+\section*{\colorbox{blue!30}{Dealing with 2-suited overcalls}}
+\addcontentsline{toc}{section}{Dealing with 2-suited overcalls}
+
+\subsubsection*{1\clubs -- (\alrts{2\diams}) -- ?}
+2\diams = \major
+\begin{itemize}
+    \item 2\hearts = \clubs weak/\gf
+    \item 2\spades = \diams weak/\gf
+    \item 2\nt = \minor weak
+    \item 3\minor = \minor\ \inv
+    \item 3\hearts = 55\minor\ \gf
+    \item 3\spades = 55\minor\ \inv
+\end{itemize}
+
+\subsubsection*{1\diams -- (\alrts{2\diams}) -- ?}
+2\diams = \major
+\begin{itemize}
+    \item 2\hearts = \clubs weak/\gf
+    \item 2\spades = \diams weak/\gf
+    \item 2\nt = \minor weak
+    \item 3\minor = \minor\ \inv
+    \item 3\major = splinter (\fton{4\diams})
+\end{itemize}
+
+\subsubsection*{1\clubs -- (\alrts{2\nt}) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item 3\clubs = \hearts, \invp
+    \item 3\diams = \spades, \invp
+    \item 3\major = to play
+\end{itemize}
+
+\subsubsection*{1\diams -- (\alrts{2\nt}) -- ?}
+\begin{itemize}
+    \item 3\clubs = \invp, fit
+    \item 3\diams = simple raise 6-9
+    \item 3\hearts = 5+\spades, \gf
+    \item 3\spades = 6\spades, \nf \imp
+\end{itemize}
+
+\subsubsection*{1\hearts -- (\alrts{2\nt}) -- ?}
+\begin{itemize}
+    \item 3\clubs = \invp, fit
+    \item 3\diams = 5+\spades, \gf
+    \item 3\hearts = simple raise 6-9
+    \item 3\spades = 6\spades, \nf \imp
+\end{itemize}
+
+\subsubsection*{1\spades -- (\alrts{2\nt}) -- ?}
+\begin{itemize}
+    \item 3\clubs = 5+\hearts, \gf
+    \item 3\diams = \invp, fit
+    \item 3\hearts = 6\hearts, \nf \imp
+    \item 3\spades = simple raise 6-9
+\end{itemize}
+
+\subsubsection*{1\hearts -- (\alrts{2\hearts}) -- ?}
+\begin{itemize}
+    \item 2\spades = \invp, fit
+    \item 3\minor = 5+, \gf
+    \item 3\hearts = simple raise 6-9
+    \item 3\spades = splinter
+    \item 4\minor = fit jump (5\minor with 2/3 honors, 7+, 4\hearts)
+\end{itemize}
+
+\subsubsection*{1\spades -- (\alrts{2\spades}) -- ?}
+\begin{itemize}
+    \item 2\spades = \invp, fit
+    \item 3\minor = 5+, \gf
+    \item 3\hearts = simple raise 6-9
+    \item 3\spades = splinter
+    \item 4\minor = fit jump (5\minor with 2/3 honors, 7+, 4\hearts)
+\end{itemize}
+
+\chapter*{\colorbox{Plum!30}{Other opponents' overcalls}}
+\addcontentsline{toc}{chapter}{Other opponents' overcalls}
+
+\section*{\colorbox{blue!30}{\hsf\ interference}}
+\addcontentsline{toc}{section}{\hsf\ interference}
+
+\subsubsection*{...\\{\color{WildStrawberry}\textbf{ASK}\color{black}} -- (\anysuit{\textbullet}) -- ?}
+\begin{itemize}
+    \item \dbl = no shortness
+    \item \pass = shortness in \anysuit{\textbullet}
+    \item other suit = shortness in this suit
+    \item agreed suit = other shortness (if there is no place to bid it)
+\end{itemize}
+
+\subsubsection*{...\\{\color{WildStrawberry}\textbf{ASK}\color{black}} -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = no shortness
+    \item \pass = shortness in doubled suit
+    \item other suit = shortness in this suit
+\end{itemize}
+
+\section*{\colorbox{blue!30}{RKCB interference}}
+\addcontentsline{toc}{section}{RKCB interference}
+
+\subsubsection*{4\nt -- (\dbl/5\minor) -- ?}
+DOPI
+
+\subsubsection*{4\nt -- (5\major) -- ?}
+DEPO
 
 \part*{\colorbox{RoyalPurple!30}{Defensive bidding}}
 \addcontentsline{toc}{part}{Defensive bidding}
