--- a/KrysiaBartek2024/OldSystemFiles/others/1ntDealingWithInterference.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/1ntDealingWithInterference.tex
@@ -10,7 +10,7 @@
 \usepackage{caption}
 \usepackage{enumerate}
 
-\import{../../lib/}{bridge.sty}
+\import{../../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
 \title{Jak radzić sobie z wejściami na 1\nt?}
@@ -206,7 +206,7 @@ są punkty naszego partnera. Kara możemy pokazać tylko słabe lub \gf.
 
 Partner (na S) nie miał możliwości inwitu, więc zdecydował się na \gf, ale trafił w
 16\hcp i 4-kartowy fit. 4\hearts to dobry kontrakt. Czemu straciliśmy gwiazdkę? Gramy ze złej ręki.
-Tutaj warto zatrzymać się na chwilę, i odpowiedzieć dobie na pytanie, czemu właściwie
+Tutaj warto zatrzymać się na chwilę, i odpowiedzieć sobie na pytanie, czemu właściwie
 zależy nam na grze z dobrej ręki. Głównym powodem grania transferami po 1\nt nie jest granie z dobrej ręki,
 tylko to, żeby osoba znająca bilans rozdania, miała możliwość decydowania o jego wysokości.
 Granie z silniejszej ręki zwykle nie jest \textit{aż tak} ważne. Sytuacja zmienia się, gdy mamy do czynienia
