--- a/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
+++ b/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
@@ -280,15 +280,24 @@
         \addcontentsline{toc}{section}{Drury} {
             {\textbf{OFF}} in competition
 
-            \subsubsection*{P -- 1\major \\ ?}
+            \subsubsection*{P -- 1\hearts \\ ?}
             \begin{itemize}
-                \item 1\nt = 8-11, no fit
-                \item 2\clubs = 4-fit mixed raise (7)8-10\dps OR 3-fit (9)10-11\dps
-                \item 2\major = 3-fit, 4-8\dps
-                \item 2\diams/2\hearts/3\clubs = solid suit
-                \item 2\nt/3\diams/3\hearts =  color + fit (2\nt = \clubs)
-                \item 3\major = 5-fit 4-6\dps (or 4 with shortness)
-                \item 3\nt over 1\spades (3\spades over 1\hearts) = Two Tiered Splinters = 4+\major, unspecified singleton, (10)11\dps
+                \item 2\clubs = better hand, fit
+                \item 2\diams = mixed raise
+                \item 2\hearts = weak raise
+                \item 2\nt/3\clubs/3\diams = color + fit (2\nt = \spades)
+                \item 3\spades = Two Tiered Splinters = 4+\hearts, unspecified singleton, (10)11\dps
+                \item 3\nt/4\clubs/4\diams = void splinter (3\nt = \spades void)
+            \end{itemize}
+
+            \subsubsection*{P -- 1\spades \\ ?}
+            \begin{itemize}
+                \item 2\clubs = better hand, fit
+                \item 2\diams = \trsf{\hearts} 7+
+                \item 2\hearts = mixed raise
+                \item 2\spades = weak raise
+                \item 3\clubs/3\diams/3\hearts = color + fit
+                \item 3\nt = Two Tiered Splinters = 4+\spades, unspecified singleton, (10)11\dps
                 \item 4\clubs/4\diams/4\hearts = void splinter
             \end{itemize}
 
@@ -305,16 +314,12 @@
             \subsubsection*{P -- 1\spades \\ 2\clubs -- ?}
             \begin{itemize}
                 \item 2\diams = \inv
+                \item 2\hearts = 4+\hearts\ \invp
                 \item 2\spades = no interest in the game
                 \item 2\nt = \ahsf, usually 18-20 \bal
                 \item 3\clubs/3\diams/3\hearts = 55 (may be 54) Slam Try
                 \item 3\nt/4\clubs/4\diams/4\hearts = splinter (3\nt = 4\hearts)
                 \item 4\spades = to play
-            \end{itemize}
-
-            \subsubsection*{P -- 1\major \\ 2\clubs -- 2\major \\ ?}
-            \begin{itemize}
-                \item 3\anysuit{x} = \nat
             \end{itemize}
 
             \subsubsection*{P -- 1\major \\ 2\clubs -- 2\diams \\ ?}
